# Family-Inc

./: .gitignore  00_Architecture_and_Roadmap.md  01_Family_Kickoff_Guide.md  02_Reminders_Engine_Spec.md  03_Partner_Signoff.md  08_Design_Session_Prompt.md  09_Progress_Review_Session_Prompt.md  BACKLOG.md  CLAUDE.md  DECISIONS.md  DESIGN.md  ENGINEERING.md  FINANCE_PLAN.md  FINANCE_PLANNING_PROMPT.md  Family_OS.xlsx  NEXT_SESSION_PROMPT.md  RESUME_PROMPT.md  ROADMAP.md  SPEC.md  V3_BUILD_PLAN.md  V3_RECONCILE.md  pyproject.toml  reminders_engine.py  requirements.txt  sunday_briefing.py
Archive/: 00_Architecture_and_Roadmap.md  01_Family_Kickoff_Guide.md  01_Israeli_Bank_Scrapers.md  02_Yad2_Madlan_Watchers.md  04_Dashboard_Design_Prompt.md  09_Progress_Review_Session_Prompt.md  OVERVIEW.md
Automation/: README.md  anomaly_detector.py  config.py  dira_tracker.py  friday_briefing.py  hebcal_client.py  hebrew_categorizer.py  pdf_to_event.py  pediatric_milestones.py  reply_handler.py  review.py  run_review_deepseek.py  session_changes_example.md  session_kickoff.py  wa_outbox.py  whatsapp_summarizer.py
Dashboard/: DESIGN_LOG.md  README_SETUP.md  app.js  config.example.js  index.html  manifest.webmanifest  mock_data.json  styles.css  sw.js
Setup/: 03_Gmail_MCP_Bill_Parser.md  04_Mindee_Receipt_OCR.md  05_iCloud_GCal_Sync.md  06_Voice_Receipt_Shortcuts.md  11_Kol_Zchut_Reference_Links.md
attic/: anomaly_detector.py  dira_stub.txt  friday_briefing.py  goal_coaching.py  pediatric_milestones.py
automation/: .gitignore  README.md  __init__.py  accuracy_review.py  daily_digest.py  finance_budget_formulas.py  finance_coverage.py  finance_ingest.py  finance_recategorize.py  hebcal_client.py  import_reminders.py  love_note_server.py  property_scrape.py  reminders_engine.py  reply_handler.py  review.py  session_kickoff.py  sweep_love_notes.py  templates.py  weekly_briefing.py  whatsapp_summarizer.py
(+163 files in other folders)
